mainly refactor (but did add LINELENGTH)